tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_invalid_prefix_target.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserInvalidPrefixTarget;

fn main() -> i32 {
  ++1;
  return 0;
}